# My-blog

./: .gitignore  README.md  db.sqlite3  pyproject.toml
blog/: forms.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_post_category.py  0003_post_image.py  0004_alter_post_image.py  0005_alter_post_image.py  0006_alter_post_image.py  0007_alter_post_image.py  0008_remove_post_image.py  0009_post_image.py  0010_alter_post_image.py  0011_alter_post_image.py  0012_alter_post_image.py  0013_alter_post_image.py
blog/static/css/: styles.css
blog/templates/blog/: base.html  post_detail.html  post_edit.html  post_list.html
mysite/: settings.py  urls.py
