[tool.poetry]
name = "mysite"
version = "0.1.0"
description = "A blog with django backend"
authors = ["Dan <misternutel@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.2.5"
Pillow = "^8.3.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"

[tool.poetry.scripts]
manage = "manage:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
